# MYLA-my-helpful-assistant

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: package.json
apps/api/src/: agentRunner.test.ts  agentRunner.ts  index.ts  modelClient.ts  toolIntent.test.ts  toolIntent.ts  toolPlanner.test.ts  toolPlanner.ts
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: main.tsx  styles.css
config/: pushcut-shortcuts.json
docs/: architecture.md  integration-contracts.md  risk-matrix.md  secrets-and-audit.md
infra/docker/: docker-compose.yml
workers/ml/: pyproject.toml
workers/ml/app/: __init__.py  main.py  model_router.py  schemas.py  voice.py
