[project]
name = "jarvis-ml-worker"
version = "0.1.0"
description = "Python ML worker for local LLM inference and future voice pipelines."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.1.1"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
